Eliminate reflection from 23 runtime classes
Removes 54 of the 687 NoReflection reports outside the reflection module and
the annotation processors, and the allowances with them: 21 allowIn lines go,
2 lose a category.

- ENUM_CONSTANTS: lookups by name loop over values(), keeping the exception
  type and message a caller can observe; enum-to-enum mappings are switches;
  the fixed access-log event sets are Set.of; the HTTP/2 error exceptions are
  an array indexed by ordinal
- HANDLES, CLASS_LOADING: LoomSupport calls Thread.ofVirtual, the builder,
  Executors.newThreadPerTaskExecutor and Thread.isVirtual directly, as Java 25
  has them; the VirtualThread class probe stays
- CLASS_NAMES: getSimpleName of a fixed class becomes the literal

Drafted with GPT-6 (gpt-6-astra) and reviewed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>